--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1588,5 +1588,91 @@
     <string name="P337">Nagsimula na ang laro, walang pwedeng tumaya</string>
     <string name="J748">Promotion</string>
     <string name="nickname_match_error">Character na iyong ipinasok ay hindi tugma (maaaring maglaman ng buong lapad o mga espesyal na character o espasyo)</string>
+    <string name="P362">Halaga ng paglago</string>
+    <string name="P363">I-upgrade ang bonus</string>
+    <string name="P364">Lingguhang turnover bonus</string>
+    <string name="P365">Birthday bonus</string>
+    <string name="P366">Eksklusibong bonus</string>
+    <string name="P367">mag-upgrade sa susunod na level</string>
+    <string name="P368">Mga naka-activate na benepisyo</string>
+    <string name="P369">Walang mga benepisyo sa kasalukuyang antas.Mangyaring ipagpatuloy ang pagtaya upang makakuha ng mga puntos sa paglago upang ma-upgrade ang iyong antas</string>
+    <string name="P370">Mga benepisyong hindi na-activate</string>
+    <string name="P371">Mga pribilehiyo ng VIP</string>
+    <string name="P372">Mga detalye ng VIP</string>
+    <string name="P373">Tumanggap</string>
+    <string name="P374">Natanggap</string>
+    <string name="P375">Naka-pending</string>
+    <string name="P376">Hindi eligible</string>
+    <string name="P377">Nag-expire na</string>
+    <string name="P378">Nag-failed ang operasyon, mangyaring makipag-ugnayan sa customer service</string>
+    <string name="P379">Rate ng paglilipat ng halaga ng paglago ng VIP</string>
+    <string name="P380">Ang pagpaparami ng halaga ng paglago na nakuha ng bawat level ng VIP sa mga nakatalagang laro</string>
+    <string name="P381">Kaugnay ng pag-upgrade</string>
+    <string name="P382">Birthday</string>
+    <string name="P383">Kumpletuhin ang impormasyon at makakuha ng birthday gift money</string>
+    <string name="P384">Hindi na mababago muli ang birthday. Sigurado ka bang i-save ito?</string>
+    <string name="P385">Matagumpay na nai-save ang birthday xxxx/xx/xx</string>
+    <string name="P386">Kasalukuyang lebel</string>
+    <string name="P387">Iba pang mga laro</string>
+    <string name="P388">Ang bonus sa promosyon ay maaaring makuha sa loob ng 30 araw pagkatapos ng pag-upgrade. Isang beses lang ma-claim ang bawat level. Maaari itong bawiin pagkatapos matugunan ang katumbas na withdrawal turnover multiple.</string>
+    <string name="P389">Ang birthday gift ay kailangang i-set muna sa personal na impormasyon at irehistro sa loob ng 60 araw. Ang kaukulang halaga ay ipapamahagi ayon sa antas ng kaarawan. Ito ay maaaring kolektahin sa loob ng 30 araw kung ang mga kaukulang kinakailangan ay natutugunan.
+        \nMaaaring gawin ang withdrawal sa isang multiple ng withdrawal turnover</string>
+    <string name="P390">Ang lingguhang pulang sobre ay bukas para sa koleksyon mula Lunes hanggang Biyernes, at ang kabuuang epektibong turnover mula noong nakaraang Lunes hanggang noong nakaraang Linggo ay dapat matugunan ang pangangailangan upang maging karapat-dapat para sa resibo (demand turnover at issuance
+    \nAng halaga ay tinutukoy ayon sa antas noong nakaraang Linggo), at ang pag-withdraw ay maaaring gawin kung ang katumbas na withdrawal turnover multiple ay natutugunan.</string>
+    <string name="P391">Ang eksklusibong pulang sobre ay kailangang manu-manong ilapat ng user. Pagkatapos ng pagsusuri, awtomatiko itong ililipat sa wallet nang walang karagdagang abiso. Ang bawat antas ay maaari lamang matanggap nang isang beses upang matugunan ang kaukulang daloy ng pag-alis.
+    \nMaaari kang mag-withdraw ng pera ng maraming turnover</string>
+    <string name="P392">1. Kalkulahin ang halaga ng paglago na nakuha sa nakaraang araw sa isang nakapirming oras bawat araw
+    \n2. Ang halaga ng paglago ay kinakalkula sa pamamagitan ng pagpaparami ng epektibong halaga ng pagtaya ng laro sa turnover multiple
+    \n3. Ang bagong halaga ng paglago na nakuha araw-araw ay idadagdag sa orihinal na halaga ng paglago. Kung ang kabuuan ay mas malaki kaysa sa kinakailangan para sa susunod na antas, ang antas ay awtomatikong ipo-promote.
+    \n4. Ang katumbas na halaga ng paglago ng demand ay ibabawas mula sa antas ng promosyon, at isang antas lamang ang maaaring i-promote nang hindi hihigit sa bawat araw.
+    \n5. Ang platform ay may karapatang baguhin, suspindihin, kanselahin, atbp. ang kaganapan nang walang espesyal na abiso, at inilalaan ang karapatan sa pinal na interpretasyon ng event.</string>
+    <string name="P393">Naabot ang maximum level</string>
+    <string name="P394">Mga detalye ng relegation</string>
+    <string name="P395">Relegation experience</string>
+    <string name="P396">Ang halaga ng kita ay maaaring kumpletuhin ang relegation</string>
+    <string name="P397">Congratulations sa pagkumpleto ng relegation task</string>
+    <string name="P398">Panuntunan sa relegation</string>
+    <string name="P399">Simula sa ika-1 ng susunod na buwan pagkatapos ng \"pagbabago sa VIP level\" ng isang miyembro, dapat kumpletuhin ng mga miyembro ang wastong mga kinakailangan sa pagtaya ng kaukulang antas bago sila makapagpatuloy sa pagpapanatili ng kanilang level sa loob ng 30 araw.</string>
+    <string name="P400">Kapag nag-failed ang relegation, ang VIP level ay ibababa sa dating level at ang isang bahagi ng growth value ay pananatilihin.</string>
+    <string name="P401">Tanging ang halaga ng kita ng VIP na nakuha sa loob ng 30 araw ang susuriin para sa relegation. Ire-reset ang oras ng pagtatasa para sa relegation kapag nag-a-upgrade.</string>
+    <string name="P402">Nakatuon na serbisyo sa customer</string>
+    <string name="P403">Ang iyong eksklusibong customer service ay magagamit 24/7 upang sagutin ang iyong mga tanong at matugunan ang lahat ng makatwirang pangangailangan.</string>
+    <string name="P404">Mabilis na pag-withdraw</string>
+    <string name="P405">Magbukas ng VIP exclusive withdrawal channel at ayusin ang mga kahilingan sa withdrawal ayon sa VIP level para matiyak ang iyong karanasan sa paglalaro</string>
+    <string name="P406">Kaugnay sa relegation</string>
+    <string name="P407">Mag-apply</string>
+    <string name="P409">Uri ng laro</string>
+    <string name="P410">Growth value multiple</string>
+    <string name="P411">3 minuto</string>
+    <string name="P412">Ang platform ay may karapatang baguhin, suspindihin, kanselahin, atbp. ang kaganapan nang walang espesyal na abiso, at inilalaan ang karapatan sa pinal na interpretasyon ng event.</string>
+    <string name="P413">Ang valid bet na 1 puntos sa ay maaaring makakuha ng X puntos ng halaga ng paglago</string>
+    <string name="P414">OK Sports</string>
+    <string name="P415">Na-achieve na</string>
+    <string name="P416">Natitirang Taya</string>
+    <string name="P417">Ang aking VIP</string>
+    <string name="P418">Na-upgrade ka na sa VIP</string>
+    <string name="P419">Hindi na kailangang panatilihin ang kasalukuyang lebel</string>
+    <string name="P420">Mga detalye ng growth value</string>
+    <string name="P421">Ipakita ang data para sa nakaraang 30 araw</string>
+    <string name="P422">Pagtaya sa Laro</string>
+    <string name="P423">I-upgrade ang pag-deduct</string>
+    <string name="P424">Mga paglabag sa pag-deduct</string>
+    <string name="P425">Nadagdagang platform</string>
+    <string name="P426">Nag-failed ang relegation</string>
+    <string name="P427">Sistema ng lebel</string>
+    <string name="P428">Mga kondisyon sa pag-upgrade</string>
+    <string name="P429">Mga kundisyon ng relegation</string>
+    <string name="P430">Walang relegation na kailangan</string>
+    <string name="P431">Paano makuha ang growth value</string>
+    <string name="P432">Listahan ng mga benepisyo</string>
+    <string name="P433">Mag-upgrade para makakuha ng mga reward</string>
+    <string name="P434">Sa iyong kaarawan, maaari mong matanggap ang regalo sa kaarawan na inihanda namin nang mabuti para sa iyo.</string>
+    <string name="P435">Kumpletuhin ang mga itinalagang taya bawat linggo para matanggap ang iyong lingguhang red packet</string>
+    <string name="P436">Malaking eksklusibong red packet ang naghihintay sa iyo na mangolekta</string>
+    <string name="P437">7x24 na oras na customer service upang maglingkod sa iyo</string>
+    <string name="P438">Eksklusibong VIP channel, matatanggap ang pagbabayad sa ilang segundo</string>
+    <string name="P439">Pinakamataas</string>
+    <string name="P440">Kakalkulahin buwan-buwan ang relegation</string>
+
 </resources>
 
