--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1617,4 +1617,88 @@
     <string name="P337">Đã bắt đầu trận, không thể đặt cược</string>
     <string name="J748">Ưu đãi</string>
     <string name="nickname_match_error">Các ký tự bạn nhập không khớp (có thể chứa khoảng cách hoặc các ký tự đặc biệt)</string>
+    <string name="P362">Tích luỹ</string>
+    <string name="P363">Quà thăng hạng</string>
+    <string name="P364">Lì xì mỗi tuần</string>
+    <string name="P365">Quà sinh nhật</string>
+    <string name="P366">Lì xì riêng</string>
+    <string name="P367">lên cấp tiếp theo</string>
+    <string name="P368">Phúc lợi hiện có</string>
+    <string name="P369">Cấp bậc hiện tại không có phúc lợi.Hãy tiếp tục đặt cược để nhận tích luỹ để thăng cấp</string>
+    <string name="P370">Phúc lợi VIP tiếp theo</string>
+    <string name="P371">Đặc quyền VIP</string>
+    <string name="P372">Chi tiết VIP</string>
+    <string name="P373">Nhận</string>
+    <string name="P374">Đã nhận</string>
+    <string name="P375">Chờ xét duyệt</string>
+    <string name="P376">Không có quyền</string>
+    <string name="P377">Hết hạn</string>
+    <string name="P378">Thao tác thất bại mời liên hệ CSKH</string>
+    <string name="P379">Bội số Doanh thu tích luỹ thăng cấp của VIP</string>
+    <string name="P380">Bội số Doanh thu tích luỹ thăng cấp đạt được theo từng cấp VIP trong trò chơi được chỉ định</string>
+    <string name="P381">Liên quan đến thăng cấp</string>
+    <string name="P382">Sinh nhật</string>
+    <string name="P383">Hoàn thiện thông tin, nhận quà sinh nhật</string>
+    <string name="P384">Sinh nhật không thể chỉnh sửa, chắc chắn lưu?</string>
+    <string name="P385">Sinh nhật xxxx/xx/xx đã lưu thành công</string>
+    <string name="P386">VIP hiện tại</string>
+    <string name="P387">Trò chơi khác</string>
+    <string name="P388">Nhận tiền thưởng thăng cấp trong vòng 30 ngày kể từ ngày thăng cấp, mỗi cấp bậc chỉ nhận 1 lần. Đáp ứng đủ các yêu cầu liên quan đến bội số doanh thu thì có thể rút tiền</string>
+    <string name="P389">Quà sinh nhật trước tiên phải hoàn thành ngày sinh trong thông tin cá nhân và cần đã đăng ký đủ 60 ngày. Giá trị quà được phát sẽ tương ứng với cấp bậc hiện có ngay ngày sinh nhật. Có thể nhận trong vòng 30 ngày, đáp ứng đủ các yêu cầu liên quan đến bội số doanh thu thì có thể rút tiền.</string>
+    <string name="P390">Thời gian nhận lì xì mỗi tuần từ thứ 2 đến thứ 6, để nhận lì xì cần đáp ứng đầy đủ yêu cầu về tổng doanh thu cược hợp lệ từ thứ 2 đến CN của tuần trước đó (Yêu cầu cho Doanh thu và giá trị lì xì sẽ dựa trên cấp bậc của CN tuần trước đó). Đáp ứng đủ các yêu cầu liên quan đến bội số doanh thu thì có thể rút tiền</string>
+    <string name="P391">Lì xì đặc biệt yêu cầu người dùng đăng ký thủ công. Sau khi xét duyệt, tiền sẽ tự động được chuyển vào ví mà không cần thông báo thêm. Mỗi cấp bậc chỉ có thể nhận được một lần, đáp ứng đủ các yêu cầu liên quan đến bội số doanh thu thì có thể rút tiền.</string>
+    <string name="P392">1. Tích luỹ thăng cấp của ngày hôm trước sẽ được tính vào một thời gian cố định mỗi ngày.
+    \n2.Tích luỹ thăng cấp được tính bằng cách nhân số tiền đặt cược hợp lệ của trò chơi với bội số doanh thu.
+    \n3. Tích luỹ thăng cấp mới thu được mỗi ngày sẽ được cộng vào Tích luỹ thăng cấp ban đầu, nếu tổng lớn hơn yêu cầu của cấp bậc tiếp theo thì cấp bậc đó sẽ tự động được thăng cấp.
+    \n4. Khi thăng cấp sẽ trừ vào giá trị tích luỹ hiện có, và bạn chỉ có thể thăng cấp tối đa mỗi ngày 1 lần.
+    \n5. Nền tảng có quyền sửa đổi, đình chỉ, hủy bỏ, v.v. trận dấu mà không cần thông báo riêng và có quyền giải thích cuối cùng về trận đấu.</string>
+    <string name="P393">Đã đạt cấp bậc cao nhất</string>
+    <string name="P394">Chi tiết duy trì cấp bậc</string>
+    <string name="P395">Kinh nghiệm duy trì cấp bậc</string>
+    <string name="P396">Tích luỹ thăng cấp để hoàn tất việc duy trì cấp bậc</string>
+    <string name="P397">Chúc mừng bạn đã hoàn thành nhiệm vụ duy trì cấp bậc</string>
+    <string name="P398">Quy định duy trì cấp bậc</string>
+    <string name="P399">Bắt đầu từ ngày 1 của tháng tiếp theo sau khi thành viên \"thay đổi cấp độ VIP\", thành viên phải hoàn thành các yêu cầu đặt cược hợp lệ của cấp độ tương ứng trước khi có thể tiếp tục duy trì cấp độ của mình trong 30 ngày.</string>
+    <string name="P400">Khi duy trì cấp bậc không thành công, cấp VIP sẽ bị tụt xuống mức trước đó và một phần giá trị tích luỹ thăng cấp sẽ được giữ lại.</string>
+    <string name="P401">Giá trị tích luỹ thăng cấp VIP đạt được trong vòng 30 ngày mới được tính để duy trì cấp bậc. Thời gian đánh giá duy trì cấp bậc sẽ được đặt lại khi thăng cấp.</string>
+    <string name="P402">Dịch vụ khách hàng tận tâm</string>
+    <string name="P403">CSKH riêng dành cho bạn, luôn sẵn sàng 24/7 để trả lời các câu hỏi, đáp ứng mọi nhu cầu hợp lệ của bạn.</string>
+    <string name="P404">Rút tiền trong</string>
+    <string name="P405">Mở kênh rút tiền riêng cho VIP và sắp xếp các yêu cầu rút tiền theo cấp độ VIP để đảm bảo trải nghiệm trò chơi của bạn</string>
+    <string name="P406">Liên quan đến duy trì cấp bậc</string>
+    <string name="P407">Áp dụng</string>
+    <string name="P408">Tận hưởng tối cao</string>
+    <string name="P409">Loại trò chơi</string>
+    <string name="P410">Bội số tích luỹ thăng cấp</string>
+    <string name="P411">3 phút</string>
+    <string name="P412">Nền tảng có quyền sửa đổi, đình chỉ, hủy bỏ, v.v. trận dấu mà không cần thông báo riêng và có quyền giải thích cuối cùng về trận đấu.</string>
+    <string name="P413">1 điểm của cược hợp lệ giúp bạn nhận được tối thiểu X điểm tích luỹ thăng cấp</string>
+    <string name="P414">OK Thể thao</string>
+    <string name="P415">Đã đạt điều kiện</string>
+    <string name="P416">Cược còn lại</string>
+    <string name="P417">VIP của tôi</string>
+    <string name="P418">Bạn đã được thăng cấp VIP X</string>
+    <string name="P419">Không cần trụ hạng cho cấp bậc hiện tại</string>
+    <string name="P420">Chi tiết tích luỹ thăng cấp</string>
+    <string name="P421">Hiển thị dữ liệu trong 30 ngày qua</string>
+    <string name="P422">Game cá cược</string>
+    <string name="P423">Nâng cấp khấu trừ</string>
+    <string name="P424">Vi phạm khấu trừ</string>
+    <string name="P425">Thêm nền tảng</string>
+    <string name="P426">Trụ hạng không thành công</string>
+    <string name="P427">Hệ thống cấp bậc</string>
+    <string name="P428">Điều kiện nâng cấp</string>
+    <string name="P429">Điều kiện trụ hạng</string>
+    <string name="P430">Không cần trụ hạng</string>
+    <string name="P431">Làm thế nào để nhận tích luỹ thăng cấp</string>
+    <string name="P432">DS phúc lợi</string>
+    <string name="P433">Nâng cấp để nhận phần thưởng bất ngờ</string>
+    <string name="P434">Bạn có thể nhận được món quà sinh nhật mà chúng tôi đã tỉ mỉ chuẩn bị riêng cho ngày sinh nhật của bạn</string>
+    <string name="P435">Hoàn thành các cược được chỉ định mỗi tuần để nhận phong bì đỏ hàng tuần của bạn</string>
+    <string name="P436">Lì xì khủng độc quyền đang chờ bạn thu nhận</string>
+    <string name="P437">CSKH tận tâm 24/7 luôn phục vụ bạn</string>
+    <string name="P438">Kênh độc quyền VIP, thanh toán sẽ đến ngay chỉ sau vài giây</string>
+    <string name="P439">Cao nhất</string>
+    <string name="P440">Việc trụ hạng sẽ được tính hàng tháng</string>
+
 </resources>
