--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1700,8 +1700,8 @@
     <string name="P438">Kênh độc quyền VIP, thanh toán sẽ đến ngay chỉ sau vài giây</string>
     <string name="P439">Cao nhất</string>
     <string name="P440">Việc trụ hạng sẽ được tính hàng tháng</string>
-    <string name="P441">Cấp bậc tiếp theo:</string>
-    <string name="P442">Trụ hạng:</string>
+    <string name="P441">Cấp bậc tiếp theo</string>
+    <string name="P442">Trụ hạng</string>
     <string name="P443">Tích luỹ thăng cấp kết toán vào 15:50 mỗi ngày</string>
 
 </resources>
