forget password 翻译修改

--- a/app/src/main/res/values-phi/strings.xml
+++ b/app/src/main/res/values-phi/strings.xml
@@ -1599,5 +1599,6 @@
     <string name="P331">Ikinalulungkot naming ipaalam sa iyo na tinanggihan ang iyong pagsusumite sa KYC. Mangyaring muling isumite ang mga wastong dokumento upang makumpleto ang proseso. salamat po.</string>
     <string name="P332">Rason</string>
     <string name="P330">Isumite muli</string>
+    <string name="forget_password_title">Pagbawi ng password</string>
 </resources>
 
